--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -304,13 +304,14 @@
 
 /* GitHub Contributions Section */
 .at__github-contributions {
-  margin-top: 5rem;
+  margin-top: 3.5rem;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
+  margin-bottom: 0rem;
 }
 
 .at__github-contributions .contributions-text {
